@@ -6,6 +6,7 @@ Changelog for django-photologue
 
 - The Twitter-Bootstrap templates become the default; the previous templates are
   moved to 'contrib'.
+- Removed deprecated PhotologueSitemap.
 
 2.7 (unreleased)
 ----------------
